# StockTracker

./: README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
src/tsic/: __init__.py  __main__.py  models.py  settings.py
src/tsic/ai/: __init__.py  detector.py  formatter.py  pipe.py
src/tsic/commandline/: __init__.py  analyze_cmd.py  app.py  db_cmd.py  fetch_cmd.py  query_cmd.py  schedule_cmd.py  watch_cmd.py
src/tsic/fetching/: __init__.py  orchestrator.py  validator.py
src/tsic/ratelimit/: __init__.py  token_bucket.py
src/tsic/scheduling/: __init__.py  cron.py  launchd.py
src/tsic/sources/: __init__.py  base.py  fugle_source.py  mops_source.py  twse_source.py  yfinance_source.py
src/tsic/storage/: __init__.py  database.py  maintenance.py  migrations.py  repository.py  schema.sql  summary.py
src/tsic/tui/: __init__.py  app.py  detail_view.py  launcher.py  watchlist_view.py
tasks/: todo.md
tests/: test_analyze_cmd.py  test_base_source.py  test_cli.py  test_cron.py  test_database.py  test_db_cmd.py  test_detail_view.py  test_detector.py  test_fetch_cmd.py  test_formatter.py  test_fugle_source.py  test_launchd.py  test_maintenance.py  test_migrations.py  test_models.py  test_mops_source.py  test_orchestrator.py  test_pipe.py  test_query_cmd.py  test_repository.py  test_schedule_cmd.py  test_settings.py  test_skeleton.py  test_token_bucket.py  test_tui_app.py  test_tui_keys.py  test_tui_update.py  test_twse_source.py  test_validator.py  test_watch_cmd.py  test_watchlist_repository.py  test_yfinance_source.py
