[project]
name = "tsic"
version = "0.1.0"
description = "StockTracker interactive console"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "textual",
    "httpx",
    "yfinance",
    "lxml",
    "rich",
]

[project.scripts]
tsic = "tsic.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
